nqc/src/lexer/snapshots/nqc__lexer__error__test__err_span_display.snap
---
source: nqc/src/lexer/error.rs
expression: error.to_string()
---
Syntax error on line 2:
2| with an error
           ^^^^^
